@@ -1,5 +1,7 @@
 *SVN*
 
+* Ensure that save on child object fails for invalid belongs_to association. Closes #11555. [rubyruy]
+
 * Add support for interleaving migrations by storing which migrations have run in the new schema_migrations table. Closes #11493 [jordi]
 
 * ActiveRecord::Base#sum defaults to 0 if no rows are returned.  Closes #11550 [kamal]
